fixed more alignment with picture

--- a/itis3135/styles/default.css
+++ b/itis3135/styles/default.css
@@ -31,9 +31,9 @@ footer
 }
 
 
-
 .intro_wedding_pic
 {
+  align-self: center;
   width: 189px;
   height: 252px;
 }
